# QsslProject

./: QSSL.vpp  README.md
Phase2/: CMakeLists.txt  README.md  RunGuiOnly.bat
Phase2/qsslWPF/View/: LoadingView.xaml  LoginView.xaml
Phase2/qsslWPF/ViewModels/: SuccessViewModel.cs
Phase2/src/kem/: kem.h
Phase2/tests/: crypto_functions.c  socket_functions.h  tls.c
PhaseA/: QSSL.drawio
PhaseB/: QSSL.drawio  QSSL_2.vpp  QSSL_sequence.vpp  RunClientOnly.bat  RunProject.bat  the encryption.txt  userGuide.docx  ~$SL_Book.docx  ~$ok_SSLQ.docx
PhaseB/code/: CMakeLists.txt  RunProject.bat  RunServerOnly.bat  recording.pcapng
PhaseB/code/qsslBackend/: crypto_functions.h  params.h
PhaseB/code/qsslSdk/: Constants.cs  SDK.cs  UdpComm.cs
PhaseB/code/qsslWPF/: App.xaml.cs
PhaseB/code/qsslWPF/View/: MainScreenView.xaml.cs  SuccessView.xaml  SuccessView.xaml.cs
PhaseB/code/qsslWPF/ViewModels/: ViewModelCommand.cs
PhaseB/qsslSdk/Model/: UserModel.cs
PhaseB/qsslWPF/: App.xaml  qsslWPF.csproj  qsslWPF.sln
PhaseB/qsslWPF/View/: LoadingView.xaml.cs  LoginView.xaml.cs  MainScreenView.xaml
PhaseB/qsslWPF/ViewModels/: LoadingViewModel.cs  LoginViewModel.cs  MainScreenViewModel.cs  ViewModelBase.cs
PhaseB/src/: CMakeLists.txt  oqsconfig.h.cmake
PhaseB/src/kem/: kem.c
PhaseB/src/sig/: sig.c  sig.h
PhaseB/tests/: CMakeLists.txt  client.c  client.h  example_kem.c  server.c  server.h  socket_functions.c
